--- a/pagina/css/estilo.css
+++ b/pagina/css/estilo.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
+* {
+  margin: auto;
+}
+
 body {
   font-family: "Poppins", serif;
 }
@@ -9,14 +13,35 @@ header {
   width: 80%;
   padding: 30px 10px 20px 50px;
   margin: auto;
-  height: 250px;
+  height: 80px;
+}
+
+#logo {
+  display: flex; /* Alineación horizontal */
+  align-items: center; /* Centra verticalmente */
+  gap: 10px; /* Espacio entre SVG y texto */
+  width: auto; /* Ajusta al contenido */
+}
+
+/* Ajustar el tamaño del logo */
+#logo svg {
+  width: 50px; /* Cambia el tamaño según sea necesario */
+  height: auto;
+  color: aqua;
+}
+
+/* Estilo para el texto dentro de #logo */
+#logo span {
+  font-size: 1.2rem; /* Tamaño del texto */
+  color: white; /* Color del texto */
+  font-weight: bold; /* O cualquier estilo deseado */
 }
 
 nav {
   float: right;
-  width: 70%s;
+  width: 50%s;
   border: solid 1px #000000;
-  padding: 20px;
+  padding: 10px;
 }
 
 a {
@@ -30,4 +55,105 @@ a {
 a:hover {
   background-color: red;
   color: rgb(79, 228, 161);
+}
+
+#slide {
+  background-image: url("../images/fotocarrera.jpg");
+  background-size: cover;
+  height: 650px;
+  text-align: center;
+}
+
+#slide h1 {
+  padding-top: 30px;
+  font-size: 40px;
+  color: white;
+  text-shadow: #000000 1px 0 5px;
+}
+
+#slide p {
+  font-size: 19px;
+  color: white;
+  width: 50%;
+}
+
+main section {
+  width: 80%;
+  font-size: 20px;
+  text-align: left;
+  padding: 20px;
+  overflow: hidden;
+}
+
+main section h1 {
+  font-size: 30;
+  color: orange;
+  padding-bottom: 20px;
+}
+
+.imagen-derecha {
+  float: right;
+  width: 450px;
+  margin-left: 50px;
+  margin-bottom: 20px;
+  border-radius: 20px;
+}
+
+.boton {
+  width: 40%;
+  background: rgb(255, 94, 0);
+  color: white;
+  font-size: 30px;
+  vertical-align: middle;
+  border-radius: 20px;
+  text-align: center;
+  float: left;
+  margin: 20px;
+  padding: 10px 0;
+}
+
+#galeria {
+  overflow: hidden;
+  width: 80%;
+  padding: 5%;
+  text-align: center;
+  border-top: solid 1px black;
+}
+
+.foto-galeria {
+  width: 40%;
+  border-radius: 20px;
+  box-shadow: #000000 1px 0 3px;
+  float: center;
+  margin: 5px;
+}
+
+footer {
+  background-color: #000000;
+  color: white;
+  width: 100%;
+  height: auto;
+  padding: 20px 0;
+  text-align: center;
+}
+
+#contacto {
+  display: flex;
+}
+
+.formulario input {
+  width: 100%;
+  padding: 5px;
+  border: solid 1px rgb(255, 94, 0);
+  display: block;
+  margin-bottom: 6px;
+}
+
+.mapa ifram {
+  width: 100%;
+}
+
+.redes-sociales {
+  color: yellow;
+  padding: 5px;
 }
